--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["MargoRSq <49024821+MargoRSq@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "3.9.6"
 python-telegram-bot = "^13.7"
 starlette = "^0.15.0"
 autopep8 = "^1.5.7"
