--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = "3.9.6"
 python-telegram-bot = "^13.7"
 starlette = "^0.15.0"
 autopep8 = "^1.5.7"
-psycopg2 = "^2.9.1"
+psycopg2-binary = "^2.9.1"
 
 [tool.poetry.dev-dependencies]
 
