--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,12 @@ description = ""
 authors = ["MargoRSq <49024821+MargoRSq@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "3.9.6"
+python = "^3.9.5"
 python-telegram-bot = "^13.7"
 starlette = "^0.15.0"
 autopep8 = "^1.5.7"
 psycopg2-binary = "^2.9.1"
+SQLAlchemy = "^1.4.23"
 
 [tool.poetry.dev-dependencies]
 
