trash: need heroku db

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,12 @@ description = ""
 authors = ["MargoRSq <49024821+MargoRSq@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9.5"
+python = "3.9.5"
 python-telegram-bot = "^13.7"
 starlette = "^0.15.0"
 autopep8 = "^1.5.7"
 psycopg2-binary = "^2.9.1"
-<<<<<<< HEAD
-SQLAlchemy = "^1.4.23"
-=======
 SQLAlchemy = "1.4.22"
->>>>>>> feat/orm-db
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.8b0", allow-prereleases = true}
